ui/apps/themes/components/launcher.less
/* ... */
#io-ox-appcontrol {
    position: absolute;
    left: 0;
    right: 0;
    z-index: 12;
    color: #fff;
    height: @appcontrol-height;
    border-bottom: 1px solid @appcontrol-border-color;
    padding: 0;
    display: flex;
    align-content: center;

    .smartphone & {
        height: @appcontrol-height-smartphone;
    }

    &:before {
        content: '';
        position: absolute;
        left: 0;
        right: 0;
        z-index: -1;
        height: @appcontrol-height;
        border-bottom: 1px solid @appcontrol-border-color;
        opacity: 0;
        .smartphone & {
            height:  @appcontrol-height-smartphone;
            border-bottom: 0;
        }
    }

    html.time-dependent &:before {
        transition: opacity 5s linear;
    }

    & > div {
        display: block;
    }

    .badge {
        background-color: @notification-icon-background;
    }

    #io-ox-launcher, #io-ox-quicklaunch {
        flex-shrink:0;
        align-self: auto;
        min-width: 0;
        min-height: auto;
        & > button {
            // styles for fa-icon
            font-size: 18px;
            color: @appcontrol-launcher-color;
            padding: 2px 16px 2px 16px;
            width: 48px;
            // svg styles
            //padding: 24px 16px;
            //width: @appcontrol-height - 16;
            position: relative;
            z-index: 2;
            height: @appcontrol-height;
            display: inline-block;
            border: 0;
            svg .fill-c1 { fill: #fff; }

            .smartphone & {
                &.launcher-btn {
                    padding: 12px;
                    width: @appcontrol-launcher-height-smartphone;
                    height: @appcontrol-launcher-height-smartphone - 1;
                }
            }
        }
        button {
            outline:0;
            &:hover, &:focus { color: @appcontrol-launcher-color-highlight; }
        }
    }
    #io-ox-quicklaunch > button {
        color: @quicklaunch-button-color;
        margin-top: initial;
        & > .lcell > .icon {
            margin-bottom: 4px;
        }
    }

    &.open #io-ox-launcher > button,
    #io-ox-launcher > button:hover,
    #io-ox-launcher > button:focus,
    #io-ox-quicklaunch > button:hover,
    #io-ox-quicklaunch > button:focus {
        background: rgba(0, 0, 0, .3);
        outline: 0;
        //svg .fill-c1 { fill: @brand-primary; }
        //svg .stroke-c1 { fill: @brand-primary; }
    }

    svg.indicator {
        position: absolute;
        z-index: 1;
        top: 18px;
        left: 33px;
        circle { fill: #eb4400 }
    }

    #io-ox-quicklaunch {

        .smartphone & {
            display: none;
        }

        flex-shrink: 0;
        min-width: @quicklaunch-width;
        min-height: auto;

        .title {
            // yes visibility hidden not display none. Otherwise the upsell icon is not displayed
            visibility: hidden;
            height: 0;
        }

        .upsell i {
            visibility: visible;
            position: absolute;
            z-index: 1;
            top: 32px;
            left: 30px;
            color: #ffc107;
            font-size: 14px;
        }
    }

    #io-ox-topsearch {
        margin-top: 15px;
        flex-grow: 1;

        .search-box > .form-group { margin-bottom: 0; }

        .search-field {
            border-radius: 0;
            height: 32px;
        }

        .tokenfield { padding-top: 2px; }

        .twitter-typeahead .tt-input {
            background-color: transparent;
        }

        // input placeholder text
        .tokenfield-placeholder {
            // avoid visual changes when tokenfield get's initated
            padding-left: @default-padding;
        }

        .io-ox-find {
            flex: 1;
            max-width: 350px;
            margin: auto;
        }
    }

    .io-ox-find:not(.active) {
        .search-field {
            background-color: rgba(255, 255, 255, 0.15);
            border: 1px solid rgba(255, 255, 255, 0.30);
        }

        // NOTE: Placeholders: IE 11 first and needs !important
        .token-input:-ms-input-placeholder { color: #fff !important; }
        .tokenfield-placeholder:-ms-input-placeholder { color: #fff !important; }

        .token-input::placeholder { color: #fff; }
        .tokenfield-placeholder::placeholder { color: #fff; }
        .token-input, .tokenfield-placeholder {
            &::-webkit-input-placeholder, &::-ms-input-placeholder {
                color: #fff;
            }
        }
    }

    #io-ox-toprightbar,
    #io-ox-toprightbar > ul,
    #io-ox-toprightbar > ul > li,
    #io-ox-toprightbar > ul > li > a {
        display: inline-flex;
        align-items: center;
        justify-content: flex-end;
        height: 100%;
        margin: 0;
    }

    #io-ox-toprightbar {
        padding-right: 12px; // break alignment on purpose
        // more space needed on smartphones
        .smartphone & { padding-right: 0}
        .launcher {
            & > a {
                padding: 16px 11px;
                cursor: pointer;
                font-size: 18px;
                text-decoration: none;
                color: @appcontrol-launcher-color;

                &:hover, &:focus {
                    background: rgba(0, 0, 0, .3);
                    outline: 0;
                    color: @appcontrol-launcher-color-highlight;
                }
            }
        }

        .launcher-icon.fa-question { font-size: 24px; }
        .launcher-icon.fa-refresh { position: relative; }

        .contact-picture {
            .picture(40px, 40px);
            .flex-center;
            background-color: #eee;
            color: rgba(0, 0, 0, 0.60);
            font-size: 13px;
            font-weight: bold;
            background-clip: padding-box;
            border: 1px solid rgba(0, 0, 0, 0.50);
        }
    }
}
/* ... */

