oxui-830: fixes color contrast

--- a/ui/apps/themes/components/launcher.less
+++ b/ui/apps/themes/components/launcher.less
@@ -280,6 +280,7 @@ html:not(.smartphone) #io-ox-appcontrol #io-ox-toprightbar #io-ox-launcher .laun
 
     .io-ox-find:not(.active) {
         .search-field {
+            color: white;
             background-color: rgba(255, 255, 255, 0.15);
             border: 1px solid rgba(255, 255, 255, 0.30);
         }
